--- a/bookLibrary.css
+++ b/bookLibrary.css
@@ -1,3 +1,6 @@
+body {
+    background-color: lightblue;
+}
 #libraryContainer {
     display: flex;
     flex-wrap: wrap;
@@ -11,4 +14,16 @@
     margin: 20px;
     border: solid black 5px;
     border-radius: 5px;
+    background-color: lightgoldenrodyellow;
+}
+
+#addNewBookButton {
+    font-size: 30px;
+    border: solid black 2px;
+    border-radius: 75px;
+    height: 75px;
+    width: 75px;
+    display: block;
+    margin: 0 auto;
+    text-align: center;
 }
