--- a/bookLibrary.css
+++ b/bookLibrary.css
@@ -30,9 +30,10 @@ body {
 
 #formContainer {
     width: 300px;
-    height: 200px;
+    height: 150px;
     background-color: lightgreen;
     border: solid black 3px;
     margin: 0 auto;
-    text-align: center;
+    
+    padding: 15px;
 }
