--- a/bookLibrary.css
+++ b/bookLibrary.css
@@ -15,6 +15,7 @@ body {
     border: solid black 5px;
     border-radius: 5px;
     background-color: lightgoldenrodyellow;
+    width: 300px;
 }
 
 #addNewBookButton {
@@ -36,4 +37,12 @@ body {
     margin: 0 auto;
     
     padding: 15px;
+}
+
+.removeEntry {
+    border: solid black 2px;
+    border-radius: 5px;
+    display: block;
+    margin:0 auto;
+    float: right;
 }
