added a button. This is a commit before I go wild and break it :)

--- a/bookLibrary.css
+++ b/bookLibrary.css
@@ -46,3 +46,11 @@ body {
     margin:0 auto;
     float: right;
 }
+
+.markRead {
+    border: solid black 2px;
+    border-radius: 5px;
+    display: block;
+    margin:0 auto;
+    float: right;
+}
