--- a/bookLibrary.css
+++ b/bookLibrary.css
@@ -33,8 +33,7 @@ h1 {
     border-radius: 5px;
     height: 75px;
     width: 75px;
-    display: block;
-    margin: 0 auto;
+    
     text-align: center;
     color: white;
 }
@@ -70,4 +69,29 @@ h1 {
     margin: 0 auto;
     text-align: center;
     display: block;
+}
+
+#clearLocal{    
+    font-size: 20px;
+    border: solid white 1px;
+    background-color: black;
+    border-radius: 5px;
+    height: 75px;
+    width: 350px;
+    
+    text-align: center;
+    color: white;
+}
+ #clearLocal:hover {
+     background-color: #FF6600 ;
+ }
+
+ #addNewBookButton:hover {
+    background-color: #FF6600 ;
+}
+
+#topContainer {
+    display:flex;
+    justify-content: center;
+
 }
